# ToKi

./: .gitignore  CHANGELOG.md  Cargo.toml  EDITOR_PLUGIN_EXCEPTION.md  Justfile  LICENSE-COMMERCIAL.md  LICENSE-TOKI.md  LICENSE.md  NOTICE.md  README.md  THIRD_PARTY_LICENSES.md  about.hbs  about.toml  build.rs  deny.toml  toki_editor_config.json
crates/toki-core/: Cargo.toml
crates/toki-core/src/: ai.rs  ai_tests.rs  animation.rs  asset_cache.rs  asset_cache_tests.rs  camera.rs  collision.rs  collision_tests.rs  entity.rs  errors.rs  events.rs  fonts.rs  fonts_tests.rs  game.rs  game_combat.rs  game_input.rs  game_inventory.rs  game_render_queries.rs  game_scene.rs  lib.rs  menu.rs  menu_tests.rs  pack.rs  pack_tests.rs  project_assets.rs  project_assets_tests.rs  project_content.rs  project_runtime.rs  project_runtime_tests.rs  resources.rs  rules.rs  scene.rs  scene_manager.rs  serialization.rs  sprite.rs  sprite_render.rs  sprite_render_tests.rs  text.rs  text_tests.rs  timing.rs  (+2 more)
crates/toki-core/src/ai/: behaviors.rs  constants.rs  context.rs  mod.rs  movement.rs  run_and_multiply.rs  system.rs  types.rs
crates/toki-core/src/assets/: atlas.rs  object_sheet.rs  object_sheet_tests.rs  tilemap.rs
crates/toki-core/src/entity/: builder.rs  definition.rs  manager.rs  mod.rs  types.rs
crates/toki-core/src/game/: ai_runtime.rs  animation.rs  combat.rs  input.rs  input_state.rs  interaction.rs  mod.rs  movement.rs  render_queries.rs  rules.rs  rules_tests.rs  scene.rs  stat_effects.rs  transition.rs
crates/toki-core/src/graphics/: image.rs  vertex.rs
crates/toki-core/src/math/: coordinates.rs  projection.rs
crates/toki-core/src/menu/: composition.rs  constants.rs  controller.rs  layout.rs  mod.rs  types.rs  utilities.rs
crates/toki-core/tests/: atlas.rs  camera.rs  collision.rs  coordinates.rs  entity.rs  entity_definition.rs  errors.rs  events.rs  game.rs  image.rs  projection.rs  resources.rs  rules.rs  scene.rs  serialization.rs  sprites.rs  tilemap.rs  timing.rs  vertex.rs
crates/toki-editor/: Cargo.toml  toki_editor_config.json
crates/toki-editor/assets/: scene_anchor.pam  scene_anchor.ppm
crates/toki-editor/src/: background_tasks.rs  background_tasks_tests.rs  config.rs  config_tests.rs  editor_app.rs  editor_app_tests.rs  editor_grid.rs  editor_renderer.rs  editor_tab_strip.rs  editor_types.rs  editor_viewport.rs  fonts.rs  fonts_tests.rs  game_viewport.rs  logging.rs  main.rs  renderer.rs  rule_graph_ui.rs  ui.rs  validation.rs
crates/toki-editor/src/editor_app/: background_tasks.rs  map_editor.rs  new_project.rs  previews.rs  project_requests.rs  runtime.rs  session.rs
crates/toki-editor/src/editor_services/: commands.rs  graph_metadata.rs  mod.rs
crates/toki-editor/src/project/: assets.rs  assets_tests.rs  export.rs  export_tests.rs  manager.rs  manager_tests.rs  mod.rs  project_data.rs  project_data_tests.rs  settings.rs  template_starter.rs  templates.rs
crates/toki-editor/src/rendering/: mod.rs  scene.rs  window.rs
crates/toki-editor/src/scene/: manager.rs  mod.rs  overlays.rs  view_models.rs  viewport.rs  viewport_assets.rs  viewport_input.rs  viewport_math.rs  viewport_prepare.rs  viewport_tests.rs  viewport_ui.rs
crates/toki-editor/src/ui/: editor_domain.rs  editor_ui.rs  editor_ui_animation_authoring.rs  editor_ui_animation_authoring_tests.rs  editor_ui_animation_editor.rs  editor_ui_asset_palette.rs  editor_ui_entity_editor.rs  editor_ui_entity_editor_tests.rs  editor_ui_graph.rs  editor_ui_hierarchy_panel.rs  editor_ui_map_editor.rs  editor_ui_menu_editor.rs  editor_ui_scene_tree.rs  editor_ui_sprite_editor.rs  editor_ui_sprite_editor_tests.rs  editor_ui_tests.rs  hierarchy.rs  hierarchy_tests.rs  inspector.rs  inspector_tests.rs  inspector_trait.rs  menus.rs  menus_tests.rs  mod.rs  panel_layout.rs  panels.rs  panels_tests.rs  rule_graph.rs  rule_graph_tests.rs  template_workflow.rs  template_workflow_tests.rs  undo_redo.rs  undo_redo_tests.rs
crates/toki-editor/tests/fixtures/: scene_rules_full_surface.json  scene_rules_on_player_move_runtime.json
crates/toki-render/: Cargo.toml
crates/toki-render/shaders/: debug.wgsl  sprite.wgsl
crates/toki-render/src/: app.rs  backend.rs  draw.rs  draw_tests.rs  errors.rs  gpu.rs  gpu_tests.rs  lib.rs  pipeline.rs  scene.rs  targets.rs  text.rs  text_tests.rs  texture.rs  vertex.rs  wgpu_utils.rs
crates/toki-render/src/pipelines/: debug.rs  debug_tests.rs  mod.rs  sprite.rs  tilemap.rs
crates/toki-render/src/util/: fill.rs
crates/toki-render/tests/: errors.rs  gpu_rendering.rs  pipelines.rs  vertex.rs
crates/toki-runtime/: Cargo.toml
crates/toki-runtime/src/: app.rs  app_bootstrap.rs  app_lifecycle.rs  app_presenter.rs  app_scene_runtime.rs  app_splash.rs  app_tests.rs  app_tick.rs  app_transition.rs  lib.rs  main.rs  main_tests.rs  pack.rs  pack_tests.rs  runtime_menu.rs
crates/toki-runtime/src/systems/: asset_loading.rs  asset_loading_tests.rs  audio.rs  audio_manager.rs  audio_manager_tests.rs  camera.rs  camera_manager.rs  camera_manager_tests.rs  frame_limiter.rs  game.rs  mod.rs  (+10 more)
crates/toki-schemas/: Cargo.toml
crates/toki-schemas/schemas/: atlas.json  entity.json  map.json  object_sheet.json  scene.json
crates/toki-schemas/src/: lib.rs
crates/toki-schemas/tests/: entity_schema.rs  map_schema.rs  object_sheet_schema.rs  scene_rule_actions_schema.rs
crates/toki-template-builtins/: Cargo.toml
crates/toki-template-builtins/src/: lib.rs  value_reader.rs
crates/toki-template-builtins/tests/: builtins.rs
crates/toki-template-lowering/: Cargo.toml
crates/toki-template-lowering/src/: error.rs  lib.rs  lowering.rs  project_fs.rs
crates/toki-template-lowering/tests/: attack_lowering.rs  project_fs.rs
crates/toki-template-runner/: Cargo.toml
crates/toki-template-runner/src/: lib.rs
crates/toki-template-runner/tests/: runner.rs
crates/toki-templates/: Cargo.toml
crates/toki-templates/src/: descriptor.rs  error.rs  lib.rs  parameter.rs  protocol.rs  provider.rs  semantic.rs
crates/toki-templates/tests/: phase1_contract.rs  provider_contract.rs
(+200 files in other folders)
