[workspace]
members = [
  "crates/toki-core",
  "crates/toki-schemas",
  "crates/toki-render",
  "crates/toki-runtime",
  "crates/toki-editor",
]
resolver = "2"

[workspace.package]
version = "0.1.1"
edition = "2021"
repository = "https://github.com/daredem0/ToKi"
homepage = "https://github.com/daredem0/ToKi"
readme = "README.md"

[workspace.metadata.release]
shared-version = true
consolidate-commits = true
allow-branch = ["main", "develop"]
tag-name = "v{{version}}"
tag-message = "Release v{{version}}"
pre-release-commit-message = "chore: release {{version}}"
push = true
publish = false

[workspace.dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
