[package]
name = "toki-core"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glam = "0.30.5"
thiserror = "2.0.14"
image = { version = "0.25", default-features = false, features = ["png"] }
bytemuck = { version = "1.14", features = ["derive"] }

tracing.workspace = true