[package]
name = "toki-core"
version.workspace = true
edition.workspace = true
license = "MPL-2.0"
description = "Core data models and shared systems for the ToKi engine."
repository.workspace = true
homepage.workspace = true
readme.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glam = { version = "0.30.5", features = ["serde"]}
thiserror = "2.0.14"
image = { version = "0.25", default-features = false, features = ["png"] }
bytemuck = { version = "1.14", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.14"
tracing.workspace = true
fastrand = "2.3"
blake3 = "1.8.2"
zstd = "0.13"

[dev-dependencies]
tempfile = "3.0"
