[package]
name = "toki-editor"
version.workspace = true
edition.workspace = true
build = "build.rs"
license = "GPL-3.0-or-later"
description = "GUI editor for authoring ToKi scenes, entities, and assets."
repository.workspace = true
homepage.workspace = true
readme.workspace = true

[features]
default = ["editor"]
editor = []

[dependencies]
anyhow = "1.0.99"
toki-runtime = { path = "../toki-runtime", version = "0.0.11" }
toki-core = { path = "../toki-core", version = "0.0.11" }
toki-render = { path = "../toki-render", version = "0.0.11", features = ["editor"] }
glam = "0.30.5"
pollster = "0.4.0"
wgpu = "25.0.2"
winit = { version = "0.30.12", features = ["wayland", "wayland-dlopen", "wayland-csd-adwaita"] }
egui = "0.32"
egui-winit = "0.32"
egui-wgpu = "0.32"
tracing.workspace = true
tracing-subscriber.workspace = true

# Project management dependencies
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rfd = "0.15"
chrono = { version = "0.4", features = ["serde"] }
jsonschema = "0.18"
