[package]
name = "toki-render"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = { version = "0.30.12", features = ["wayland", "wayland-dlopen", "wayland-csd-adwaita"] }
softbuffer = { version = "0.4.6", default-features = false, features = [
    "x11",
    "x11-dlopen",
    "wayland",
    "wayland-dlopen",
] }                                 # For fallback rendering#
tracing-subscriber = "0.3.18"
tracing = { version = "0.1.40", default-features = false }
thiserror = "2.0"                   # for lib errors
wgpu = "26.0.1"                     # For hardware-accelerated graphics
image = { version = "0.25.6", features = [ "png", "default" ]}                    # For loading sprite assets
pollster = "0.4.0"                  # For simplifying async GPU init
bytemuck = { version = "1.14", features = ["derive"] }
glam = "0.30.5"