[package]
name = "toki-render"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = { version = "0.30.12", features = ["wayland", "wayland-dlopen", "wayland-csd-adwaita"] }                              # For fallback rendering#

thiserror = "2.0"                   # for lib errors
wgpu = "26.0.1"                     # For hardware-accelerated graphics
image = { version = "0.25.6", features = [ "png", "default" ]}                    # For loading sprite assets
pollster = "0.4.0"                  # For simplifying async GPU init
bytemuck = { version = "1.14", features = ["derive"] }
glam = "0.30.5"

toki-core = { path = "../toki-core" }

tracing.workspace = true

