[package]
name = "toki-render"
version.workspace = true
edition.workspace = true
license = "GPL-3.0-or-later"
description = "WGPU-based rendering backend for ToKi scenes and editor viewports."
repository.workspace = true
homepage.workspace = true
readme.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = { version = "0.30.12", features = ["wayland", "wayland-dlopen", "wayland-csd-adwaita"] }                              # For fallback rendering#

thiserror = "2.0"                   # for lib errors
wgpu = "25.0.2"                     # For hardware-accelerated graphics (matching egui-wgpu)
image = { version = "0.25.6", features = [ "png", "default" ]}                    # For loading sprite assets
pollster = "0.4.0"                  # For simplifying async GPU init
bytemuck = { version = "1.14", features = ["derive"] }
glam = "0.30.5"

# Optional dependencies for editor integration
egui = { version = "0.32", optional = true }
egui-wgpu = { version = "0.32", optional = true }

toki-core = { path = "../toki-core", version = "0.0.11" }

tracing.workspace = true

[features]
default = []
editor = ["egui", "egui-wgpu"]
