[package]
name = "toki-runtime"
version.workspace = true
edition.workspace = true
build = "build.rs"
license = "GPL-3.0-or-later"
description = "Runtime executable and game loop integration for ToKi projects."
repository.workspace = true
homepage.workspace = true
readme.workspace = true

[lib]
name = "toki_runtime"
path = "src/lib.rs"

[[bin]]
name = "toki-runtime"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.99"
toki-render = { path = "../toki-render", version = "0.0.11" }
toki-core   = { path = "../toki-core", version = "0.0.11" }
winit = { version = "0.30.12", features = ["x11", "wayland", "wayland-dlopen", "wayland-csd-adwaita", "rwh_05"] }
glam  = "0.30.5"
kira = "0.10"
tracing.workspace = true
tracing-subscriber.workspace = true
