[package]
name = "toki-schemas"
version.workspace = true
edition.workspace = true
license = "GPL-3.0-or-later"
description = "Canonical JSON schema definitions for ToKi assets."
repository.workspace = true
homepage.workspace = true
readme.workspace = true

[lib]
name = "toki_schemas"
path = "src/lib.rs"
