[package]
name = "toki-schemas"
version.workspace = true
edition.workspace = true
license = "MPL-2.0"
description = "Canonical JSON schema definitions for ToKi assets."
repository.workspace = true
homepage.workspace = true
readme.workspace = true

[lib]
name = "toki_schemas"
path = "src/lib.rs"

[dev-dependencies]
jsonschema = "0.18"
serde_json = "1.0"
