[package]
name = "toki-template-lowering"
version.workspace = true
edition.workspace = true
license = "MPL-2.0"
description = "Template semantic lowering for authored ToKi content."
repository.workspace = true
homepage.workspace = true
readme.workspace = true

[lib]
name = "toki_template_lowering"
path = "src/lib.rs"

[dependencies]
thiserror = "2.0"
toki-core = { path = "../toki-core", version = "0.1.1" }
toki-templates = { path = "../toki-templates", version = "0.1.1" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
toki-template-builtins = { path = "../toki-template-builtins", version = "0.1.1" }
tempfile = "3.21.0"
