[package]
name = "toki-template-runner"
version.workspace = true
edition.workspace = true
license = "MPL-2.0"
description = "Project-local Rust template runner support for ToKi."
repository.workspace = true
homepage.workspace = true
readme.workspace = true

[lib]
name = "toki_template_runner"
path = "src/lib.rs"

[dependencies]
toki-templates = { path = "../toki-templates", version = "0.1.1" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
blake3 = "1.8.2"

[dev-dependencies]
tempfile = "3.21.0"
